src/App.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
/* defining css variables */
:root {
  --background: #1e1e2e;
  --grid: #4b4b5e;
  --fixed-cell-background: #1e1e2e;
  --editable-cell-background: #2a2a3b;
  --primary: #e0e0e0;
  --highlight: #4a90e2;
  --error-highlight: #ff5370;
  --success-highlight: #50fa7b;
  --yellow-highlight: #f1fa8c;
}

/* Scrollbar styles for WebKit browsers */
*::-webkit-scrollbar {
  width: 1px;
  background: var(--background);
}

*::-webkit-scrollbar-track {
  background: var(--background);
  border-radius: 10px;
}

*::-webkit-scrollbar-thumb {
  background: var(--background);
  border-radius: 10px;
  background: var(--primary);
}

*::-webkit-scrollbar-thumb:hover {
  background: var(--grid);
}

/* layout design */

body {
  background-color: var(--background);
  color: var(--primary);
  overflow: none;
}

.header {
  height: 100px;
  padding: 20px;
}

.arrow {
  font-size: 3rem;
}

.wrapper {
  height: 80dvh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.title {
  font-size: 6rem;
  margin-bottom: 12px;
  text-align: center;
}

.subTitle {
  font-size: 2rem;
  opacity: 0.8;
  text-align: center;
  margin-bottom: 12px;
}

.boardTitle {
  font-size: 3rem;
  margin-bottom: 24px;
  opacity: 0.8;
}

.selection_menu {
  list-style-type: none;
}

.menu_item {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 300px;
  padding: 10px;
  transition: 0.3s ease-in-out;
  text-align: center;
}

.menu_item button {
  width: 100%;
  margin: 0;
}

.menu_item:hover {
  transform: scale(1.1);
}

.links {
  text-decoration: none;
  color: var(--primary);
  opacity: 0.6;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}

.links:hover {
  opacity: 1;
  color: var(--highlight);
}

.score_input {
  padding: 10px;
  text-align: center;
  font-size: 1.4rem;
  font-weight: bold;
  font-family: "Courier New", Courier, monospace;
}

/* cell design */
.cell {
  height: 48px;
  width: 48px;
  border: 1px solid var(--grid);
  transition: 0.3s ease-in-out;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--background);
  text-align: center;
  color: var(--primary);
  font-size: 2rem;
  outline: none;
  transition: 0.3s ease-in-out;
}

.cell:focus {
  border: 1px solid var(--highlight);
}

.cell:hover {
  color: var(--highlight);
  border: 1px solid var(--highlight);
}

.fixed_cell {
  background-color: var(--fixed-cell-background);
}

.editable_cell {
  background-color: var(--editable-cell-background);
}

/* block design */

.block {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto auto auto;
  border: 1px solid #fff;
  position: relative;
}

/* buttons designs */

.btn_container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
}

.btn {
  background-color: transparent;
  border: 1px solid var(--primary);
  padding: 10px 20px;
  text-align: center;
  cursor: pointer;
  color: var(--primary);
  transition: 0.05s ease-in scale;
  transition: 0.3s ease-in;
  font-size: 1rem;
  font-weight: 500;
  margin: 20px;
  font-weight: bold;
}

.btn:active {
  transform: scale(0.9);
  box-shadow: 2px 2px 10px 4px var(--editable-cell-background);
}

.check_result_btn:hover {
  background-color: var(--primary);
  color: var(--background);
  box-shadow: 2px 2px 10px 4px var(--primary);
}

.hint_btn:hover {
  background-color: var(--yellow-highlight);
  color: var(--background);
  box-shadow: 2px 2px 10px 4px var(--yellow-highlight);
}

.solve_btn:hover {
  background-color: var(--success-highlight);
  color: var(--background);
  box-shadow: 2px 2px 10px 4px var(--success-highlight);
}

.close_btn {
  background-color: var(--error-highlight);
  opacity: 0.8;
  color: var(--primary);
  border: none;
}

.close_btn:hover {
  background-color: var(--error-highlight);
  opacity: 1;
}

.play_again_btn {
  background-color: var(--success-highlight);
  color: var(--background);
  opacity: 0.8;
}

.play_again_btn:hover {
  box-shadow: 2px 2px 10px 4px var(--success-highlight);
  opacity: 1;
}

.success_close_btn {
  transition: 0.3s ease-in-out;
}

.success_close_btn:hover {
  border-color: var(--error-highlight);
  color: var(--primary);
}

.score_input_btn {
  background-color: var(--highlight);
  color: var(--primary);
}

.score_input_btn:hover {
  background-color: var(--yellow-highlight);
  color: var(--background);
}

/* custom dialog */

.custom_dialog_overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.custom_dialog_box {
  background-color: var(--background);
  border-radius: 8px;
  padding: 2rem;
  text-align: center;
  max-width: 400px;
  width: 90%;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
  position: relative;
  animation: popIn 0.3s ease-out;
}

.custom_dialog_title {
  font-size: 2rem;
  margin: 0.5rem 0;
}

.success_title {
  color: var(--success-highlight);
}

.error_title {
  color: var(--error-highlight);
}

.custom_dialog_message {
  font-size: 1.2rem;
  color: var(--primary);
  margin: 10px auto;
}

/* difficulty menu */

.difficulty_menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.difficulty_list {
  list-style-type: none;
  line-height: 30px;
}

.difficulty_option {
  font-size: 2rem;
  cursor: pointer;
  text-align: center;
  margin-top: 20px;
  transition: 0.3s ease-in;
}

.difficulty_option:hover {
  transform: scale(1.2);
  color: var(--highlight);
}

/* Score Board Design */

.scores_container {
  list-style-type: none;
  border: 1px solid var(--primary);
  padding: 10px 20px;
  width: 80%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}

.score {
  border: 1px dashed var(--primary);
  padding: 10px 20px;
  box-shadow: 2px 2px 2px var(--primary);
  transition: 0.3s ease-in-out;
  width: 100%;
}

.score:hover {
  box-shadow: 4px 4px 2px var(--primary);
  transform: translateY(-2px);
}

/* How To Play Design */

.how_to_play_container {
  width: 80%;
  padding: 10px 20px;
  font-size: 1.4rem;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: space-between;
  overflow-y: auto;
  min-height: 600px;
}

.rules_container {
  list-style: decimal;
}

.rules_container li {
  margin: 20px;
}

.tips_container {
  width: 50%;
  border: 1px solid var(--yellow-highlight);
  padding: 10px 20px;
  font-size: 1.2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: var(--yellow-highlight);
  align-self: center;
}

.tips_container li {
  margin: 20px;
}

/* Mobile Styles */
@media screen and (max-width: 600px) {
  .boardTitle {
    font-size: 2rem;
  }

  .cell {
    height: 35px;
    width: 35px;
    font-size: 1.5rem;
  }

  .how_to_play_container {
    width: 100%;
  }

  .tips_container {
    width: 100%;
  }
}

